--- a/Work/雷电定位测试工具/雷电定位测试工具/雷电定位测试工具.csproj
+++ b/Work/雷电定位测试工具/雷电定位测试工具/雷电定位测试工具.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="jingweidu.cs" />
+    <Compile Include="DistanceHelper.cs" />
     <Compile Include="PositionModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
